// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli Build without entry argument 1`] = `
[Error: Command failed: node . build
 build <entry> <target>

Bundle Lambda functions

Positionals:
  entry   Entry file or directory of functions               [string] [required]
  target  Target directory for bundled functions             [string] [required]

Options:
  --help      Show help                                                [boolean]
  --version   Show version number                                      [boolean]
  --node, -n  Target Node.js version, used with @babel/preset-env
                                                      [string] [default: "8.10"]

Not enough non-option arguments: got 0, need at least 2
]
`;

exports[`cli Build without target argument 1`] = `
[Error: Command failed: node . build test/fixtures
 build <entry> <target>

Bundle Lambda functions

Positionals:
  entry   Entry file or directory of functions               [string] [required]
  target  Target directory for bundled functions             [string] [required]

Options:
  --help      Show help                                                [boolean]
  --version   Show version number                                      [boolean]
  --node, -n  Target Node.js version, used with @babel/preset-env
                                                      [string] [default: "8.10"]

Not enough non-option arguments: got 1, need at least 2
]
`;

exports[`cli Serve without entry argument 1`] = `
[Error: Command failed: node . serve
 serve <entry>

Lambda Development Server

Positionals:
  entry  Entry file or directory of Lambda functions                  [required]

Options:
  --help          Show help                                            [boolean]
  --version       Show version number                                  [boolean]
  --node, -n      Target Node.js version, used with @babel/preset-env
                                                      [string] [default: "8.10"]
  --basePath, -b  Base pathname prepended to function filenames
                                                         [string] [default: "/"]
  --port, -p      Port for development server           [number] [default: 9000]

Not enough non-option arguments: got 0, need at least 1
]
`;

exports[`cli Without arguments 1`] = `
[Error: Command failed: node .
 <command>

Commands:
  serve <entry>           Lambda Development Server
  build <entry> <target>  Bundle Lambda functions

Options:
  --help      Show help                                                [boolean]
  --version   Show version number                                      [boolean]
  --node, -n  Target Node.js version, used with @babel/preset-env
                                                      [string] [default: "8.10"]

Not enough non-option arguments: got 0, need at least 1
]
`;
